--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,53 @@
 <body>
     <h1>Lasagna</h1>
     <img src="../images/lasagna.webp">
+    <h3>Description</h3>
+    <p>Indulge in the comforting layers of a classic lasagna recipe that promises to tantalize your taste buds. Begin by crafting a rich, savory tomato sauce, simmered to perfection with aromatic garlic, onions, and a medley of Italian herbs. Meanwhile, prepare the creamy ricotta mixture, blending smooth ricotta cheese with fresh parsley, nutty Parmesan, and a hint of nutmeg for that extra depth of flavor. Assemble your masterpiece with tender lasagna noodles, generously ladling the tomato sauce over each layer, interspersed with dollops of the luscious ricotta mixture and a generous sprinkle of gooey mozzarella cheese. Repeat until your dish is piled high with deliciousness. Bake until golden and bubbly, allowing the flavors to meld together harmoniously. Let it rest briefly before serving, ensuring each bite is a delightful fusion of velvety cheese, robust sauce, and tender pasta. This lasagna recipe is a timeless crowd-pleaser, perfect for family dinners or entertaining guests, promising satisfaction with every forkful.</p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 ½ pounds lean ground beef</li>
+        <li>1 onion, chopped</li>
+        <li>2 cloves garlic, minced</li>
+        <li>1 (29 ounce) can diced tomatoes</li>
+        <li>2 (6 ounce) cans tomato paste</li>
+        <li>2 tablespoons brown sugar</li>
+        <li>1 tablespoon chopped fresh basil</li>
+        <li>2 ½ teaspoons salt, divided</li>
+        <li>1 teaspoon dried oregano</li>
+        <li>12 dry lasagna noodles</li>
+        <li>1 pint part-skim ricotta cheese</li>
+        <li>½ cup grated Parmesan cheese</li>
+        <li>2 large eggs, beaten</li>
+        <li>2 tablespoons dried parsley</li>
+        <li>1 pound mozzarella cheese, shredded</li>
+        <li>2 tablespoons grated Parmesan cheese</li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li><strong>Step 1</strong></li>
+        <p>Gather all ingredients.</p>
+        <li><strong>Step 2</strong></li>
+        <p>Cook and stir ground beef, onion, and garlic in a large skillet over medium heat for 5 minutes; drain fat.</p>
+        <li><strong>Step 3</strong></li>
+        <p>Mix in diced tomatoes, tomato paste, brown sugar, basil, 1 1/2 teaspoons salt, and oregano. Simmer meat sauce, stirring occasionally, for 30 to 45 minutes.</p>
+        <li><strong>Step 4</strong></li>
+        <p>Preheat the oven to 375 degrees F (190 degrees C).</p>
+        <li><strong>Step 5</strong></li>
+        <p>Meanwhile, bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water, stirring occasionally, until tender yet firm to the bite, about 8 minutes; drain. Lay noodles flat on towels; blot dry.</p>
+        <li><strong>Step 6</strong></li>
+        <p>Mix together ricotta, 1/2 cup Parmesan cheese, eggs, parsley, and remaining 1 teaspoon salt in a medium bowl.</p>
+        <li><strong>Step 7</strong></li>
+        <p>Layer 1/3 of the noodles in the bottom of a 9x13-inch baking dish. Cover with 1/2 of the ricotta mixture.</p>
+        <li><strong>Step 8</strong></li>
+        <p>Cover the ricotta mixture with 1/2 of the mozzarella cheese, and 1/3 of the meat sauce.</p>
+        <li><strong>Step 9</strong></li>
+        <p>Repeat. Top with remaining noodles and meat sauce. Sprinkle 2 tablespoons Parmesan cheese over the top.</p>
+        <li><strong>Step 10</strong></li>
+        <p>Bake in the preheated oven for 30 minutes. Let stand for 10 minutes before serving.</p>
+        <li><strong>Step 11</strong></li>
+        <p>Enjoy!</p>
+    </ol>
 </body>
 </html>
