Corrects salmon image size to fit screen

--- a/recipes/salmon.html
+++ b/recipes/salmon.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Grilled Salmon</h1>
-    <img src="../images/salmon.jpg" alt="Picture of salmon">
+    <img src="../images/salmon.jpg" alt="Picture of salmon" height="300px" width="300px">
     <h3>Description</h3>
     <p>Elevate your dinner repertoire with a tantalizing grilled salmon recipe that celebrates the natural flavors of this prized fish. Begin by marinating fresh salmon fillets in a zesty blend of lemon juice, minced garlic, and fragrant dill, allowing the vibrant flavors to infuse every succulent bite. As your grill preheats to perfection, prepare a tantalizing glaze using a harmonious combination of honey, soy sauce, and a dash of fiery sriracha for a hint of heat. Once the grill is hot and ready, place the marinated salmon fillets skin-side down, allowing them to sizzle and char to perfection, while basting generously with the mouthwatering glaze. As the salmon cooks to tender perfection, the aroma of smoky char and sweet glaze fills the air, enticing your senses. Serve your grilled salmon atop a bed of vibrant greens or alongside a medley of roasted vegetables for a wholesome and satisfying meal that effortlessly combines simplicity with sophistication. With its delicate balance of flavors and melt-in-your-mouth texture, this grilled salmon recipe is sure to become a staple in your culinary repertoire.</p>
 
@@ -32,7 +32,7 @@
         <li><strong>Step 3</strong></li>
         <p>Preheat an outdoor grill for medium heat and lightly oil the grate.</p>
         <li><strong>Step 4</strong></li>
-        <p>Place salmon on the preheated grill, and discard marinade. Cook salmon until fish flakes easily with a fork, about 6 to 8 minutes per side.</p>Place salmon on the preheated grill, and discard marinade. Cook salmon until fish flakes easily with a fork, about 6 to 8 minutes per side.
+        <p>Place salmon on the preheated grill, and discard marinade. Cook salmon until fish flakes easily with a fork, about 6 to 8 minutes per side.</p>
     </ol>
 </body>
 </html>
