--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -31,7 +31,7 @@
         <li>2 tablespoons grated Parmesan cheese</li>
     </ul>
 
-    <h3>Steps</h3>
+    <h3>Directions</h3>
     <ol>
         <li><strong>Step 1</strong></li>
         <p>Gather all ingredients.</p>
