--- a/recipes/murgh-kari.html
+++ b/recipes/murgh-kari.html
@@ -37,7 +37,20 @@
 
     <h3>Directions</h3>
     <ol>
-
+        <li><strong>Step 1</strong></li>
+        <p>Gather all ingredients.</p>
+        <li><strong>Step 2</strong></li>
+        <p>Sprinkle the chicken breasts with 2 teaspoons salt.</p>
+        <li><strong>Step 3</strong></li>
+        <p>Heat oil in a large skillet over high heat; partially cook the chicken in the hot oil in batches until completely browned on all sides. Transfer browned chicken breasts to a plate and set aside.</p>
+        <li><strong>Step 4</strong></li>
+        <p>Reduce the heat to medium and add onion, garlic, and ginger to the oil remaining in the skillet. Cook and stir until onion turns soft and translucent, 5 to 8 minutes. Stir curry powder, cumin, turmeric, coriander, cayenne, and 1 tablespoon of water into the onion mixture; allow to heat together for about 1 minute while stirring.</p>
+        <li><strong>Step 5</strong></li>
+        <p>Add tomatoes, yogurt, 1 tablespoon chopped cilantro, and 1 teaspoon salt to the mixture; stir to combine.</p>
+        <li><strong>Step 6</strong></li>
+        <p>Return chicken breast to the skillet along with any juices on the plate. Pour in 1/2 cup water and bring to a boil, turning the chicken to coat with the sauce. Sprinkle garam masala and 1 tablespoon cilantro over the chicken.</p>
+        <li><strong>Step 6</strong></li>
+        <p>Cover the skillet and simmer until chicken breasts are no longer pink in the center and the juices run clear, about 20 minutes. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C). Drizzle with lemon juice to serve.</p>
     </ol>
 </body>
 </html>
