--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
-    <a href="./recipes/salmon.html">Salmon</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li></li><a href="./recipes/salmon.html">Salmon</a></li>
+        <li></li><a href="./recipes/murgh-kari.html">Indian Chicken Curry</a></li>
+    </ul>
 </body>
 </html>
