--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Book</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-        <li></li><a href="./recipes/salmon.html">Salmon</a></li>
-        <li></li><a href="./recipes/murgh-kari.html">Indian Chicken Curry</a></li>
+        <li class="recipes"><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li class="recipes"><a href="./recipes/salmon.html">Salmon</a></li>
+        <li class="recipes"><a href="./recipes/murgh-kari.html">Indian Chicken Curry</a></li>
     </ul>
 </body>
 </html>
